# PracticeAlgorithm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_solution.sh
advance_c/: CMakeLists.txt
advance_c/sort/: sort.c
advance_c/split_string/: CMakeLists.txt  split_string.c
cmake/: gtest.cmake
include/: headers.h
problem_template/: CMakeLists.txt  TTT.cpp
problems/: solutions.md
problems/L124/: L124.cpp
problems/L1288/: CMakeLists.txt  L1288.cpp
problems/L1386/: CMakeLists.txt  L1386.cpp
problems/L144/: leetcode144.cpp
problems/L200/: leetcode200.cpp
problems/L207_canFinish/: CMakeLists.txt
problems/L393/: CMakeLists.txt  leetcode393_validUTF8.cpp
problems/L406/: L406.cpp
problems/L56/: CMakeLists.txt  leetcode56merge.cpp
problems/L986/: CMakeLists.txt  L986.cpp
problems/T1004_Max_Consecutive_Ones_III/: CMakeLists.txt  T1004_Max_Consecutive_Ones_III.cpp
problems/T1011_Capacity_To_Ship_Packages_Within_D_Days/: T1011_Capacity_To_Ship_Packages_Within_D_Days.cpp
problems/T102_Binary_Tree_Level_Order_Traversal/: CMakeLists.txt  T102_Binary_Tree_Level_Order_Traversal.cpp
problems/T111_Minimum_Depth_of_Binary_Tree/: T111_Minimum_Depth_of_Binary_Tree.cpp
problems/T1208_Get_Equal_Substrings_Within_Budget/: CMakeLists.txt  T1208_Get_Equal_Substrings_Within_Budget.cpp
problems/T127_Word_Ladder/: T127_Word_Ladder.cpp
problems/T1366_Rank_Teams_by_Votes/: CMakeLists.txt  T1366_Rank_Teams_by_Votes.cpp
problems/T139_Word_break/: T139_Word_Break.cpp
problems/T200_Number_of_Islands/: CMakeLists.txt  T200_Number_of_Islands.cpp
problems/T208_Implement_Trie/: CMakeLists.txt  T208_Implement_Trie.cpp
problems/T209_Minimum_Size_Subarray_Sum/: CMakeLists.txt  T209_Minimum_Size_Subarray_Sum.cpp
problems/T374_Guess_Number_Higher_or_Lower/: CMakeLists.txt  T374_Guess_Number_Higher_or_Lower.cpp
problems/T3_Longest_Substring_Without_Repeating_Characters/: CMakeLists.txt  T3_Longest_Substring_Without_Repeating_Characters.cpp
problems/T43_Multiply_Strings/: T43_Multiply_Strings.cpp
problems/T5_Longest_Palindromic_Substring/: CMakeLists.txt  T5_Longest_Palindromic_Substring.cpp
problems/T637_Average_of_Levels_in_Binary_Tree/: T637_Average_of_Levels_in_Binary_Tree.cpp
problems/T673_Number_of_Longest_Increasing_Subsequence/: T673_Number_of_Longest_Increasing_Subsequence.cpp
problems/T695_Max_Area_of_Island/: T695_Max_Area_of_Island.cpp
problems/T739_Daily_Temperatures/: CMakeLists.txt  T739_Daily_Temperatures.cpp
problems/T76_Minimum_Window_Substring/: CMakeLists.txt  T76_Minimum_Window_Substring.cpp
problems/T79_Word_Search/: T79.cpp
problems/T836_Rectangle_Overlap/: T836_Rectangle_Overlap.cpp
problems/T875_Koko_Eating_Bananas/: T875_Koko_Eating_Bananas.cpp
problems/cxx_math_function_using/: CMakeLists.txt  math_sym_using.cpp
problems/cxx_primer_ch12_dynamic_mem/: CMakeLists.txt  cxx_primer_ch2_dynamic_mem.cpp
problems/cxx_stl_algorithm/: CMakeLists.txt  cxx_stl_algorithm.cpp
problems/cxx_stl_priority_queue/: CMakeLists.txt  cxx_stl_priority_queue.cpp
problems/jiqiao/: CMakeLists.txt  jiqiao.cpp
problems/jiqiao_array/: array_process.cpp
problems/jiqiao_bit_convert/: bit_convert.cpp
problems/jiqiao_char_process/: char_process.cpp
problems/jiqiao_map/: map_process.cpp
problems/jiqiao_math/: math_process.cpp
problems/jiqiao_num_str_convert/: num_str_convert.cpp
problems/jiqiao_priority_queue/: pq.cpp
problems/jiqiao_queue/: CMakeLists.txt  queue_process.cpp
problems/jiqiao_stack/: stack_process.cpp
problems/jiqiao_stream/: jiqiao_stream.cpp
problems/jiqiao_string/: string_process.cpp
problems/jiqiao_vector/: vector_process.cpp
problems/leetcode207_canFinish/: leetcode207_canFinish.cpp
problems/note_string/: CMakeLists.txt  note_string.cpp
problems/word-break/: CMakeLists.txt
